--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   --brand-green: #2AD18A;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 @font-face {
     font-family: Inter;
     src: url(../fonts/Inter-VariableFont_opsz\,wght.ttf);
