fix: hamburger menu broke during migration, fixed in react style

--- a/src/header.css
+++ b/src/header.css
@@ -36,7 +36,7 @@
     .header__login-box {
         justify-content: center;
     }
-    [data-menu="visible"].header {
+    [data-menu="true"].header {
         transform: translateX(0);
     }
 }
