--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,44 @@
-.main {
-    display: flex;
-    flex-direction: column;
-    row-gap: 80px;
-    padding: 40px 80px 80px 80px;
+@import url(relevant-article.css);
+@import url(footer.css);
+@import url(header.css);
+@import url(main-article.css);
+@import url(page.css);
+@import url(top-article.css);
+@import url(front-page.css);
+@import url(details.css);
+@import url(login.css);
+
+:root {
+  --brand-green: #2AD18A;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+body {
+    margin: 0;
+}
+
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter-VariableFont_opsz\,wght.ttf);
+}
+
+@font-face {
+    font-family: LeagueGothic;
+    src: url(../fonts/LeagueGothic-Regular-VariableFont_wdth.ttf);
+}
+
+@font-face {
+    font-family: Poppins;
+    src: url(../fonts/Poppins/Poppins-Medium.ttf) format(truetype);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Poppins;
+    src: url(../fonts/Poppins/Poppins-SemiBold.ttf) format(truetype);
+    font-weight: 600;
 }
