--- a/src/page.css
+++ b/src/page.css
@@ -5,3 +5,25 @@
     row-gap: 40px;
     column-gap: 40px;
 }
+
+.page__top {
+    flex: 1 1 480px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+}
+
+.page__top-header {
+    font-family: Inter, serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 140%;
+    color: var(--brand-green);
+    margin-left: 48px;
+}
+
+.page__top-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
