--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,12 @@
-@import url(relevant-article.css);
-@import url(footer.css);
-@import url(header.css);
-@import url(main-article.css);
-@import url(page.css);
-@import url(top-article.css);
-@import url(front-page.css);
-@import url(details.css);
-@import url(login.css);
+@import url(./components/footer.css);
+@import url(./components/header.css);
+@import url(./pages/details.css);
+@import url(./pages/front-page.css);
+@import url(./pages/login.css);
+@import url(./pages/main-article.css);
+@import url(./pages/page.css);
+@import url(./pages/relevant-article.css);
+@import url(./pages/top-article.css);
 
 :root {
   --brand-green: #2AD18A;
